Finalizing context design for data tree

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,6 +4,9 @@ $dark_grey: #2e3233;
 $light_grey: #767676;
 $muted_grey: #7e7e7e;
 $siemens_color: #009999;
+
+$red: red;
+
 .muted-c{
     color: $muted_grey,
 }
@@ -11,4 +14,8 @@ $siemens_color: #009999;
 label{
     font-size: 18px;
     color: $light_grey;
+}
+
+.c-r{
+    color: $red;
 }
