added database comms for general data

--- a/src/styles/utility.scss
+++ b/src/styles/utility.scss
@@ -331,7 +331,9 @@ $indent_3: 15px;
 }
 
 .ellip-overflow{
-    text-overflow: ellipsis;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
 }
 
 .hide-bullet{
