long day of work

--- a/src/styles/utility.scss
+++ b/src/styles/utility.scss
@@ -351,3 +351,15 @@ $indent_3: 15px;
 .side-bar-selected{
   border-left: 1px solid green;
 }
+
+.align-r{
+  text-align: right;
+}
+
+.align-l{
+  text-align: left;
+}
+
+.p-r{
+  position: relative;
+}
