--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -29,3 +29,15 @@ label{
 .rs-theme-light .new{
     color: #5cdb00
 }
+
+.rs-theme-dark {
+    .added-color{
+        color: rgb(40, 224, 95);
+    }
+}
+
+.rs-theme-light {
+    .added-color{
+        color: rgb(22, 179, 8);
+    }
+}
