--- a/src/styles/utility.scss
+++ b/src/styles/utility.scss
@@ -363,3 +363,15 @@ $indent_3: 15px;
 .p-r{
   position: relative;
 }
+
+.light-shade-c{
+  background-color: rgba(0, 0, 0, 0.452);
+}
+
+.white-c{
+  color: white;
+}
+
+.green-bc{
+  background-color: rgb(231, 247, 231);
+}
